@@ -1,3 +1,7 @@
+2015-06-03  SilverNexus
+	* search.c: Refactor check for failure to load output file to occur
+	  only if the file was just loaded.
+
 2015-06-02  SilverNexus
 	* dir_list.h,
 	  dir_list.c: Removed unused function free_dir_node().
